--- a/indexCSS/page-footer.css
+++ b/indexCSS/page-footer.css
@@ -2,14 +2,12 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 2em 5em;
-  padding-bottom: 0;
-  background-color: var(--primary-color);
+  padding: 2em 5em 0 5em;
+  background-color: var(--primary-color); /* Use your primary color */
   width: 100%;
   position: relative;
   z-index: 10;
   box-sizing: border-box;
-  transition: padding-top 0.5s ease-in-out, background-color 0.5s ease-in-out;
   border-top: solid 2px rgb(209, 209, 209);
   margin-top: 0em;
 }
@@ -21,65 +19,103 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.322);
+  background-color: rgba(0, 0, 0, 0.14);
   z-index: 0;
 }
 
 .footer-content {
   display: flex;
-  justify-content: center;
-  gap: 10em;
-  align-items: center;
+  justify-content: space-between;
+  gap: 2em;
+  align-items: flex-start;
   width: 100%;
-  max-width: 1200px;
+  max-width: 1100px;
   z-index: 1;
   margin: 0 auto;
+  position: relative;
 }
 
 .footer-left {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  width: 30%;
 }
 
 .page-title-footer {
-  font-size: 2em;
+  font-size: var(--title-font);
+  margin-bottom: 0.5em;
 }
 
 .page-title-footer a {
   color: #cdd9e8;
   text-decoration: none;
+  transition: color 0.3s;
+}
+.page-title-footer a:hover {
+  color: #fff;
 }
 
+/* --- TWO COLUMN NAVIGATION --- */
 .page-navigation-footer {
-  font-size: 0.9em;
   display: flex;
-  align-items: center;
-  gap: 2em;
-  margin-top: 4em;
+  justify-content: center;
+  align-items: flex-start;
+  margin-right: 2em;
+  margin-top: 2em;
 }
 
-.page-navigation-footer a {
+.footer-nav-columns {
+  display: flex;
+  gap: 3em;
+}
+
+.footer-nav-col {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+}
+
+.footer-nav-col a {
   color: #cdd9e8;
   text-decoration: none;
-  display: inline-flex;
-  align-items: center;
-  transition: color 0.3s ease;
+  padding: 0.1em 0.1em;
+  border-radius: 5px;
+  transition: color 0.3s;
+}
+.footer-nav-col a:hover,
+.footer-nav-col a:focus {
+  color: white;
 }
 
-.page-navigation-footer a:hover {
-  color: #afafaf;
-}
+/* --- END TWO COLUMN NAVIGATION --- */
 
 .information-footer {
   max-width: 25em;
   line-height: 1.5em;
-  font-size: 0.9em;
+  font-size: 0.98em;
   align-self: flex-end;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
-
 .information-footer p {
   color: #cdd9e8;
+}
+
+.icon-link {
+  display: inline-flex;
+  align-items: left;
+  font-size: 1.2em;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+.linkedin-in-icon {
+  width: 1.2em;
+  height: 1.2em;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .footer-line {
@@ -87,53 +123,65 @@
   height: 0.2em;
   background-color: rgb(209, 209, 209);
   margin: 1em 0;
+  margin-bottom: 0;
 }
 
 .copyright {
   color: rgb(191, 191, 191);
   text-align: center;
+  font-size: 0.95em;
+  margin: 0.5em 0 0.5em 0;
 }
 
-.icon-link {
-  display: inline-flex;
-  align-items: center;
-  transition: color 0.3s ease;
-}
-
-.linkedin-icon {
-  transition: fill 0.3s ease;
-}
-
-/* Media Query for Smaller Devices */
-@media screen and (max-width: 768px) {
-  .page-footer {
-    padding: 1.5em;
-  }
-
+/* Responsive */
+@media screen and (max-width: 900px) {
   .footer-content {
     flex-direction: column;
-    gap: 1.5em;
+    gap: 2em;
+    align-items: center;
+    text-align: center;
+  }
+  .footer-left {
     align-items: center;
   }
-
   .page-title-footer {
-    font-size: 1.2em;
+    font-size: 1.3em;
   }
-
-  .page-navigation-footer {
+  .footer-nav-columns {
+    flex-direction: column;
     gap: 1em;
-    font-size: 0.7em;
-    margin-top: 1.5em;
+    align-items: center;
   }
-
+  .footer-nav-col {
+    align-items: center;
+  }
+  .page-navigation-footer {
+    margin-top: 1em;
+  }
   .information-footer {
-    font-size: 0.7em;
+    font-size: 0.95em;
     line-height: 1.4em;
     max-width: 100%;
     text-align: center;
+    align-items: center;
+    align-self: center;
   }
+  .icon-link {
+    justify-content: center;
+  }
+}
 
+@media screen and (max-width: 600px) {
+  .page-footer {
+    padding: 1.2em 0.4em 0 0.4em;
+  }
+  .footer-content {
+    gap: 1.2em;
+  }
+  .page-title-footer {
+    font-size: 1em;
+  }
   .copyright {
-    font-size: 0.7em;
+    font-size: 0.75em;
   }
 }
