--- a/indexCSS/page-header.css
+++ b/indexCSS/page-header.css
@@ -29,6 +29,7 @@
   max-width: 1920px;
   width: 100%;
   padding: 0 2em;
+  padding-right: 6em;
   box-sizing: border-box;
   z-index: 1;
   margin: 0;
