--- a/subPage.css/agrobiznis.css
+++ b/subPage.css/agrobiznis.css
@@ -209,17 +209,18 @@
     margin: 0 auto;
     box-shadow: none;
     border-radius: 0;
+    padding-top: 0;
+  }
+  .agrobiznis-content {
+    margin-top: 0;
+    padding: 0;
+    max-width: 90%;
+    margin: 0 auto;
+    margin-top: 8em;
   }
 
   .content-wrapper {
     flex-direction: column;
-  }
-
-  .agrobiznis-content {
-    max-width: 90%;
-    padding: 0;
-    margin: 0 auto;
-    margin-top: 8em;
   }
 
   .agrobiznis-image-container {
@@ -250,8 +251,8 @@
     width: 100%;
     margin-bottom: 0;
     white-space: nowrap;
-    text-shadow: 0 2px 8px rgba(0, 0, 0, 0.35),
-      /* soft outer shadow */ 0 1px 0 rgb(0, 0, 0);
+    text-shadow: 4px 6px 8px rgba(0, 0, 0, 0.35),
+      /* soft outer shadow */ 0 2px 1px rgb(0, 0, 0);
   }
 
   .agrobiznis-text {
