--- a/subPage.css/agrobiznis.css
+++ b/subPage.css/agrobiznis.css
@@ -209,7 +209,8 @@
     margin: 0 auto;
     box-shadow: none;
     border-radius: 0;
-    padding-top: 8em;
+    padding-top: 7em;
+    margin-top: 1em;
   }
   .agrobiznis-content {
     margin-top: 0;
