--- a/subPage.css/agrobiznis.css
+++ b/subPage.css/agrobiznis.css
@@ -209,7 +209,7 @@
     margin: 0 auto;
     box-shadow: none;
     border-radius: 0;
-    margin-top: 4em;
+    padding-top: 11em;
   }
   .agrobiznis-content {
     margin-top: 0;
@@ -242,6 +242,7 @@
     border-radius: 0;
     margin: 0;
     padding: 0;
+    margin-top: 3.5em;
   }
 
   .agrobiznis-title {
