--- a/subPage.css/agrobiznis.css
+++ b/subPage.css/agrobiznis.css
@@ -209,7 +209,6 @@
     margin: 0 auto;
     box-shadow: none;
     border-radius: 0;
-    padding-top: 11em;
   }
   .agrobiznis-content {
     margin-top: 0;
@@ -220,6 +219,7 @@
 
   .content-wrapper {
     flex-direction: column;
+    margin-top: 10em;
   }
 
   .agrobiznis-image-container {
@@ -238,7 +238,7 @@
   .agrobiznis-image {
     width: 100%;
     max-width: 100%;
-    max-height: 250px;
+    max-height: 230px;
     border-radius: 0;
     margin: 0;
     padding: 0;
