--- a/subPage.css/agrobiznis.css
+++ b/subPage.css/agrobiznis.css
@@ -224,11 +224,11 @@
     position: relative;
     max-width: 100%;
     width: 100%;
-    height: 220px; /* or whatever height fits your design */
+    height: 220px;
     min-height: 220px;
     margin: 0 auto;
     display: block;
-    order: -1; /* Move image above text */
+    order: -1;
   }
 
   .agrobiznis-image {
@@ -272,6 +272,7 @@
     font-size: var(--text-font);
     text-align: justify;
     margin-top: 3em;
+    margin-bottom: -3em;
   }
 
   /* Services Section */
