--- a/indexCSS/html.css
+++ b/indexCSS/html.css
@@ -2,6 +2,8 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  opacity: 0;
+  transition: opacity 0.2s;
 }
 html {
   scroll-behavior: smooth;
