--- a/subPage.css/about-us.css
+++ b/subPage.css/about-us.css
@@ -49,6 +49,7 @@
   margin: 3em auto;
   gap: 2em;
   flex-wrap: wrap;
+  margin-top: 8em;
 }
 
 .about-me-content {
@@ -369,6 +370,7 @@
     max-width: 90%;
     padding: 0 0.5em;
     margin: 2em auto;
+    margin-top: 5em;
   }
 
   .about-me-container,
