--- a/subPage.css/contact.css
+++ b/subPage.css/contact.css
@@ -7,6 +7,7 @@
   max-width: 900px;
   margin: 0 auto;
   position: relative;
+  margin-top: 6em;
 }
 
 .contact-info {
@@ -173,6 +174,7 @@ textarea::placeholder {
     padding: 1.5em;
     gap: 1em;
     max-width: 100%;
+    margin-top: 1.5em;
   }
 
   .contact-info {
