--- a/subPage.css/blog.css
+++ b/subPage.css/blog.css
@@ -4,6 +4,7 @@
   padding: 20px;
   max-width: 1200px;
   margin: 0 auto;
+  margin-top: 8em;
 }
 
 .blog-post {
@@ -282,5 +283,9 @@
 
   .blog-text strong {
     line-height: normal;
+  }
+
+  .blog-container {
+    margin-top: 4em;
   }
 }
