--- a/subPage.css/blog-archive.css
+++ b/subPage.css/blog-archive.css
@@ -130,8 +130,10 @@
 }
 
 .blog-header h2 {
-  border-bottom: 2px solid var(--primary-color);
-  padding-bottom: 0.5em;
+  border-left: 5px solid var(--primary-color);
+  letter-spacing: 0.01em;
+  line-height: 1.2;
+  padding-left: 0.7em;
 }
 
 .blog-header-home {
