--- a/subPage.css/blog.css
+++ b/subPage.css/blog.css
@@ -27,6 +27,10 @@
   padding-right: 1.2em;
 }
 
+.blogger-details {
+  margin-left: 2em;
+}
+
 .blogger-details label {
   font-size: 1em;
   font-weight: bold;
@@ -203,13 +207,13 @@
 
   .blog-info {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 30% 70%;
     gap: 1em;
     width: 100%;
     margin-bottom: 0.1em;
     padding-right: 0;
     border: none;
-    align-items: center;
+    align-items: start;
     padding-bottom: 0.5em;
     border-bottom: #496b79 solid 2px;
     padding-top: 0.5em;
@@ -223,8 +227,7 @@
     align-items: center;
     height: 100%;
     margin-bottom: 0;
-    margin-right: 1em;
-    padding-left: 0.5em;
+    width: 80px;
   }
 
   .blogger-image {
@@ -238,24 +241,42 @@
 
   .blogger-details {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: max-content 1fr;
     grid-column-gap: 10px;
-    align-items: center;
+    align-items: start;
     grid-column: 2;
     justify-self: start;
-    align-self: center;
     margin-right: 1.5em;
+    margin-left: 0;
+    min-width: 0;
+    width: 100%;
   }
 
   .blogger-details label {
-    text-align: right;
+    text-align: left;
     font-weight: bold;
+    white-space: nowrap;
+    align-self: start;
   }
 
-  .blogger-details p {
+  .blogger-details p:not(.blogger-title) {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     margin: 0;
     text-align: left;
-    white-space: nowrap;
+    width: 100%;
+  }
+
+  .blogger-details .blogger-title {
+    white-space: normal !important;
+    word-break: break-word;
+    overflow-wrap: break-word;
+    margin: 0;
+    text-align: left;
+    min-width: 0;
+    width: 100%;
+    padding-left: 0;
   }
 
   .blog-divider {
