--- a/indexCSS/html.css
+++ b/indexCSS/html.css
@@ -158,6 +158,7 @@ main {
 :root {
   --primary-color: #5f8aa3;
   --secondary-color: #496b79;
+  --header-color: #405e6f;
   --off-white: #f9f9f9;
   --title-font: 2em;
   --mobile-title-font: 1.5em;
