--- a/indexCSS/page-header.css
+++ b/indexCSS/page-header.css
@@ -125,7 +125,6 @@
   padding: 0;
 }
 
-/* Show dropdown with transition on hover for desktop */
 .dropdown:hover .dropdown-content {
   display: block;
   max-height: 500px;
@@ -221,24 +220,27 @@
   .page-navigation.show {
     transform: translateX(0);
     opacity: 1;
-    gap: 3em;
+    gap: 2em;
   }
 
   .page-navigation a {
-    color: #333;
     text-decoration: none;
     padding: 0em 1em;
     border-left: solid 3px var(--primary-color);
     font-size: 1.2em;
     transition: background 0.3s, color 0.3s;
-    margin-top: 0.5em;
+    margin-top: 1em;
+    border-bottom: none;
   }
   .page-navigation a h3 {
     margin: 0;
     font-weight: 300;
-    font-size: 1.1em;
     color: #333;
     padding: 0;
+  }
+
+  .dropdown a svg {
+    fill: #333;
   }
 
   .dropdown:hover .dropdown-content {
@@ -255,11 +257,20 @@
     display: flex;
   }
   .dropdown-content a {
-    padding: 0.6em 0.5em;
+    padding: 0.4em 0.9em;
     font-size: 1em;
     color: #333;
   }
   .dropdown-content a:hover {
     background: #f5f5f5;
+  }
+
+  .page-navigation .dropdown-content {
+    position: static;
+    display: none;
+  }
+
+  .page-navigation .dropdown.open .dropdown-content {
+    display: block;
   }
 }
