--- a/indexCSS/page-header.css
+++ b/indexCSS/page-header.css
@@ -209,7 +209,8 @@
   .page-navigation.show {
     transform: translateX(0);
     opacity: 1;
-    gap: 2em;
+    gap: 3em;
+    padding-top: 2em;
   }
 
   .page-navigation a {
@@ -218,11 +219,7 @@
     border-left: solid 3px var(--primary-color);
     font-size: 1.2em;
     transition: background 0.3s, color 0.3s;
-    margin-top: 1em;
     border-bottom: none;
-  }
-  .page-navigation a {
-    border-bottom: none !important;
   }
 
   .page-navigation a h3 {
@@ -243,19 +240,24 @@
   .dropdown-content {
     display: flex;
     flex-direction: column;
-    gap: 1em;
-    padding: 1em 1em;
+    gap: 2em;
+    padding: 1.5em 1em;
+    margin-top: 0.3em;
   }
   .dropdown-content.show {
     display: flex;
   }
   .dropdown-content a {
-    padding: 0.4em 0.9em;
+    padding: 0.2em 0.9em;
     font-size: 1em;
     color: #333;
   }
   .dropdown-content a:hover {
     background: #f5f5f5;
+  }
+
+  .page-navigation a:hover {
+    border-bottom: none;
   }
 
   .page-navigation .dropdown-content {
